# xarray-model

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  requirements.txt
docs/source/: api.rst  conf.py  index.rst
src/xarray_model/: __init__.py  _version.py  base.py  checks.py  components.py  containers.py  encoders.py  encoding.py  serializers.py  testing.py  types.py  validators.py
tests/test_components/: test_attrs.py  test_chunks.py  test_data_type.py  test_dims.py  test_dtype.py  test_name.py  test_shape.py  test_size.py
