[project]
name = "xarray-model"
version = "0.0.0"
description = "A JSON Schema powered validation library for xarray objects"
authors = [
    {name = "Mike Blackett", email = "27811528+mikeblackett@users.noreply.github.com"},
]
dependencies = ["xarray>=2025.4.0", "numpy>=2.2.5", "jsonschema>=4.23.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "coverage>=7.8.1",
    "hypothesis>=6.131.31",
    "pyright>=1.1.401",
    "ruff>=0.11.12",
    "sphinx>=8.2.3",
    "pydata-sphinx-theme>=0.16.1",
]
[project.optional-dependencies]
dask = [
    "dask>=2025.5.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 79
indent-width = 4
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = false
